<resources>
    <string name="app_name">Westfield Park Mate</string>
    <string name="go_to_login_page">Go to Login Page</string>
    <string name="login">Login</string>
    <string name="title_activity_main">Westfield Park Mate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="first_sign_button">Sign</string>
    <string name="please_sign_in_for_the_first_time_you_using_this_app">Please Sign in for the first time you using this app</string>
    <string name="thank_you_for_using_westfield_park_mate">Thank you for using WestField Park Mate</string>
    <string name="nameExpression">^[a-z0-9_-]{3,15}$</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in_with_email">Sign in</string>
    <string name="exit">Exit</string>
    <string name="log_out">Log out</string>
    <string name="update_account">Update Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking">Booking</string>
    <string name="system_admin">System Admin</string>
    <string name="bye">Bye?</string>
    <string name="todo">TODO</string>
    <string name="title_activity_system_admin">SystemAdminActivity</string>
    <string-array name="level">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>

    <string-array name="parking_lot">
        <item>Individual Entry</item>
        <item>Bulk Entry</item>

    </string-array>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="mainInfo">Your Current Booked Parking Lot is</string>
    <string name="back_to_main">Back to Main</string>
    <string name="your_parking_id_is">Your Parking ID is:</string>
    <string name="feedback">Feedback</string>
    <string name="booking_extra_info">Current Booking is</string>
    <string name="available">Available:</string>
    <string name="level">Level :</string>
    <string name="level_2">Level 2</string>
    <string name="level_1">Level 1</string>
    <string name="level_3">Level 3</string>
    <string name="number">Number</string>
    <string name="add">add</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="send_user_data_to_us">Send user data to us?</string>
    <string name="want_to_be_a_system_admin">Want to be a System Admin?</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="apply">Apply</string>
    <string name="congratulations">Congratulations!</string>
    <string name="parking_id">PID</string>
    <string name="sample">101</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="pid">pid</string>
    <string name="time">03:00:00</string>
    <string name="no_current_booking">No Current Booking</string>
    <string name="available_todo">Available: </string>
</resources>
