<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/qrView"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/qrView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/westfield3"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="font2"
            android:text="@string/congratulations"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="125dp"
            app:layout_constraintBottom_toTopOf="@+id/idBook"
            app:layout_constraintStart_toEndOf="@+id/idBook"
            app:layout_constraintTop_toTopOf="parent"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/qrView"/>


    </LinearLayout>

        <LinearLayout
            android:id="@+id/idBook"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/resultIDVew"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="79dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="171dp"
            android:fontFamily="font1"
            android:text="@string/your_parking_id_is"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/backToMainInResultPage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/parking_id"
            android:textAlignment="center"
            android:inputType="number"
            android:layout_marginLeft="30dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/backToMainInResultPage"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="125dp"
            android:text="@string/back_to_main"
            android:background="@color/black"
            android:textColor="@color/white"
            android:fontFamily="@font/font1"
            android:textSize="12dp"
            android:textAlignment="center" />
    </LinearLayout>

    </LinearLayout>
