<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.BookingActivities.BookingActivity"
    tools:layout_editor_absoluteY="25dp"
    android:orientation="vertical"
    tools:showIn="@layout/activity_booking">

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:orientation="horizontal"
        android:layout_marginLeft="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:orientation="horizontal"
        android:layout_marginLeft="60dp">

        <Button
            android:id="@+id/LV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:fontFamily="@font/font1"
            android:text="@string/level_1"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LV1Capa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:text="Available: TODO" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight=".3"
        android:layout_marginLeft="60dp">

        <Button
            android:id="@+id/LV2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:fontFamily="@font/font1"
            android:text="@string/level_2"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LV2Capa"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:text="Available: TODO" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight=".3"
        android:textAlignment="center"
        android:layout_marginLeft="60dp">

        <Button
            android:id="@+id/LV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:fontFamily="@font/font1"
            android:text="@string/level_3"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LV3Capa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:text="Available: TODO" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight=".3"
        android:textAlignment="center"
        android:layout_marginLeft="60dp">

    </LinearLayout>
</LinearLayout>